# global-cot

./: .gitignore  README.md  formatted_sentence_outputs_0.8.json  main.py  package.json  pathways.json  processed_responses.json  pyproject.toml  run_parallel_extraction.sh
.ipynb_checkpoints/: pyproject-checkpoint.toml  requirements-checkpoint.txt  run_parallel_extraction-checkpoint.sh
clusters/: clusters_0.8.json
deployment/: README.md  README_PYTHON.md  app.py  next.config.js  package-lock.json  package.json
flowcharts/: activation_similarity_stats_layer_17.json  cluster_0_layer_17_threshold_0.2.json  flowchart_layer_17_threshold_0.7.json  flowchart_layer_17_threshold_0.95.json
pathways/: pathways_0.8.json
responses/: completion_0.json  completion_1.json  completion_10.json  completion_100.json  completion_101.json  completion_102.json  completion_103.json  completion_104.json  completion_105.json  completion_106.json  completion_107.json  completion_110.json  completion_111.json  completion_112.json  completion_113.json  completion_114.json  completion_115.json  completion_117.json  completion_118.json  completion_119.json  completion_12.json  completion_120.json  completion_121.json  completion_122.json  completion_123.json  completion_124.json  completion_125.json  completion_126.json  completion_127.json  completion_128.json  completion_129.json  completion_13.json  completion_130.json  completion_132.json  completion_133.json  completion_134.json  completion_135.json  completion_136.json  completion_137.json  completion_138.json  (+371 more)
src/: .env  interfaces.py  (+19 more)
(+29 files in other folders)
